...
    private func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            statisticService.store(correctAnswersCount: correctAnswersCount,
                                   totalQuestionsCount: questionsAmount)
            
            let resultModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                scoreText: makeResultMessage(),
                buttonText: "Сыграть еще раз"
            )
            viewController?.show(result: resultModel)
        } else {
            switchToNextQuestion()
...
